--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.85.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.16.1",
     "next": "^14",
+    "next-sanity": "^9.10.2",
     "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "18.2.0",
     "react-type-animation": "^3.1.0",
     "resend": "^1.0.0",
+    "sanity": "^3.85.1",
+    "styled-components": "^6.1.17",
     "tailwindcss": "3.3.3"
   }
 }
